crates/serpen/tests/snapshots/stickytape_compatibility_tests__bundled_script_using_stdlib_module_in_package.snap
---
source: crates/serpen/tests/stickytape_compatibility_tests.rs
description: Bundled content for script_using_stdlib_module_in_package
---
#!/usr/bin/env python3
# Generated by Serpen - Python Source Bundler
# https://github.com/tinovyatkin/serpen

# Preserved imports
import xml.etree.ElementTree

# ─ Module: greeting ─
import types
greeting = types.ModuleType('greeting')
exec("message = 'Hello'", greeting.__dict__)

# ─ Entry Module: hello ─
import xml.etree.ElementTree
print(xml.etree.ElementTree.__name__)
print(greeting.message)
