crates/serpen/tests/snapshots/stickytape_compatibility_tests__bundled_script_with_dynamic_import.snap
---
source: crates/serpen/tests/stickytape_compatibility_tests.rs
description: Bundled content for script_with_dynamic_import
---
#!/usr/bin/env python3
# Generated by Serpen - Python Source Bundler
# https://github.com/tinovyatkin/serpen

# Preserved imports
import importlib

# ─ Entry Module: hello ─
import importlib
greeting = importlib.import_module("greeting")
print(greeting.message)
