crates/serpen/tests/snapshots/stickytape_compatibility_tests__bundled_script_with_single_local_from_import.snap
---
source: crates/serpen/tests/stickytape_compatibility_tests.rs
description: Bundled content for script_with_single_local_from_import
---
#!/usr/bin/env python3
# Generated by Serpen - Python Source Bundler
# https://github.com/tinovyatkin/serpen

# ─ Module: greeting ─
message = 'Hello'

# ─ Entry Module: hello ─
print(message)
