crates/serpen/tests/snapshots/stickytape_compatibility_tests__bundled_script_with_single_local_import_of_package.snap
---
source: crates/serpen/tests/stickytape_compatibility_tests.rs
description: Bundled content for script_with_single_local_import_of_package
---
#!/usr/bin/env python3
# Generated by Serpen - Python Source Bundler
# https://github.com/tinovyatkin/serpen

# ─ Module: greeting ─
import types
greeting = types.ModuleType('greeting')
exec("message = 'Hello'", greeting.__dict__)

# ─ Entry Module: hello ─
print(greeting.message)
