crates/serpen/tests/snapshots/stickytape_compatibility_tests__bundled_script_with_special_shebang.snap
---
source: crates/serpen/tests/stickytape_compatibility_tests.rs
description: Bundled content with shebang for script_with_special_shebang
---
#!/usr/bin/env python3

# Generated by Serpen - Python Source Bundler
# https://github.com/tinovyatkin/serpen

# Preserved imports
import sys

# ─ Entry Module: hello ─
import sys
print(sys.flags.ignore_environment)
