crates/serpen/tests/snapshots/stickytape_compatibility_tests__bundled_single_file.snap
---
source: crates/serpen/tests/stickytape_compatibility_tests.rs
description: Bundled content for single_file
---
#!/usr/bin/env python3
# Generated by Serpen - Python Source Bundler
# https://github.com/tinovyatkin/serpen

# ─ Entry Module: hello ─
print('Hello')
