crates/serpen/tests/snapshots/stickytape_compatibility_tests__bundled_single_file_using_stdlib.snap
---
source: crates/serpen/tests/stickytape_compatibility_tests.rs
description: Bundled content for single_file_using_stdlib
---
#!/usr/bin/env python3
# Generated by Serpen - Python Source Bundler
# https://github.com/tinovyatkin/serpen

# Preserved imports
import hashlib

# ─ Entry Module: hello ─
import hashlib
print(hashlib.sha1(b'Hello').hexdigest())
