crates/serpen/tests/snapshots/stickytape_compatibility_tests__comprehensive_bundling_results.snap
---
source: crates/serpen/tests/stickytape_compatibility_tests.rs
description: Comprehensive bundling test results across multiple scenarios
expression: summary
---
Bundling Test Results Summary:
✓ single_file (Single file without dependencies)
  Lines: 7, Size: 155 bytes
  Execution: Success: Hello

✓ script_with_single_local_import (Script with local module import)
  Lines: 12, Size: 290 bytes
  Execution: Success: Hello

✓ script_using_module_in_package (Script importing from package)
  Lines: 13, Size: 382 bytes
  Execution: Success: Hello

✓ script_with_single_local_from_import (Script with from-import syntax)
  Lines: 10, Size: 201 bytes
  Execution: Success: Hello

✓ imports_in_imported_modules (Nested module imports)
  Lines: 12, Size: 239 bytes
  Execution: Success: Hello

Successful: 5, Failed: 0, Total scenarios: 5
